# DESIGNER-v2

./: .coverage  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  codecov.yml  comprehensive-test-report.json  coverage.xml  environment.yml  license.txt  output_tmp.bval  output_tmp.bvec  pyproject.toml  pytest_new.ini  python.gitignore  requirements-test.txt  requirements.in  requirements.txt  run_comprehensive_tests.py  run_tests.py  setup.py  test-results.xml  test_fftw.py  tox.ini
.circleci/: config.yml  continue-config.yml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build_wheels.yml  docker-image.yml  publish-to-pypi.yml  regenerate_lock_file.yml  run_tests.yml  test.yml
constant/: constant_values.mat  dirs256.mat  dirs_constrained.mat
designer/: designer_fit_wrappers.py
designer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
designer2/: __init__.py  designer.py  tmi.py
designer2/lib/: designer_fit_wrappers.py  designer_func_wrappers.py  mpcomplex.py  smi.py  tensor.py
designer2_processing_test/: command.txt  cwd.txt
designer_tmp/: command.txt  cwd.txt
docker_deps/: Dockerfile_ants  Dockerfile_deps  Dockerfile_freesurfer  Dockerfile_fsl  Dockerfile_mrtrix  README.md
docs/: Gemfile  _config.yml  index.md
docs/_includes/: head.html
docs/_includes/components/: sidebar.html
docs/docs/TMI/: DTI-DKI.md  RICE.md  SMI.md  TMI.md  examples.md  installation.md  usage.md
docs/docs/designer/: background.md  designer.md  examples.md  installation.md  usage.md
examples/: run_designer2_and_tmi.sh
lib/: __init__.py  designer_fit_wrappers.py  designer_func_wrappers.py  designer_input_utils.py  gibbs_removal_rpg.py  mpcomplex.py  mpdenoise_adaptive.py  mpunits.py  off_moco.py  smi.py  tensor.py  utils.py
lib/io/: __init__.py  image.py
rpg_cpp/: .gitignore  compile.sh  rpg  rpg 4  unring_rpg.cpp  unring_rpg_pybind.cpp  unring_rpg_pybind_nothing.cpp  unring_rpg_pybind_notparallel.cpp  unring_rpg_pybind_old.cpp  unring_rpg_pybind_rc_unringing.cpp
rpg_cpp/fftw-3.3.10/: FFTW3Config.cmake  Makefile  config.h  config.status  fftw.pc  fftw3.pc  libfftw3.la  libtool
rpg_cpp/fftw-3.3.10/.libs/: libfftw3.3.dylib  libfftw3.lai
rpg_cpp/fftw-3.3.10/api/: Makefile  apiplan.lo  configure.lo  execute-dft-c2r.lo  execute-dft-r2c.lo  execute-dft.lo  execute-r2r.lo  execute-split-dft-c2r.lo  execute-split-dft-r2c.lo  execute-split-dft.lo  execute.lo  export-wisdom-to-file.lo  export-wisdom-to-string.lo  export-wisdom.lo  f77api.lo  flops.lo  forget-wisdom.lo  import-system-wisdom.lo  import-wisdom-from-file.lo  import-wisdom-from-string.lo  import-wisdom.lo  malloc.lo  map-r2r-kind.lo  mapflags.lo  mkprinter-file.lo  mkprinter-str.lo  mktensor-iodims.lo  mktensor-iodims64.lo  mktensor-rowmajor.lo  plan-dft-1d.lo  plan-dft-2d.lo  plan-dft-3d.lo  plan-dft-c2r-1d.lo  plan-dft-c2r-2d.lo  plan-dft-c2r-3d.lo  plan-dft-c2r.lo  plan-dft-r2c-1d.lo  plan-dft-r2c-2d.lo  plan-dft-r2c-3d.lo  plan-dft-r2c.lo  (+27 more)
rpg_cpp/fftw-3.3.10/dft/: Makefile  bluestein.lo  ct.lo  dftw-direct.lo  dftw-directsq.lo  dftw-generic.lo  dftw-genericbuf.lo  direct.lo  indirect-transpose.lo  indirect.lo  kdft-dif.lo  kdft-difsq.lo  kdft-dit.lo  kdft.lo  nop.lo  problem.lo  zero.lo
rpg_cpp/fftw-3.3.10/doc/: Makefile
rpg_cpp/fftw-3.3.10/genfft/: Makefile
rpg_cpp/fftw-3.3.10/kernel/: Makefile  align.lo  alloc.lo  assert.lo  awake.lo  buffered.lo  cpy1d.lo  cpy2d-pair.lo  cpy2d.lo  debug.lo  extract-reim.lo  hash.lo  iabs.lo  kalloc.lo  md5-1.lo  md5.lo  minmax.lo  ops.lo  pickdim.lo  planner.lo  primes.lo  print.lo  rader.lo  scan.lo  solver.lo  solvtab.lo  stride.lo  tensor.lo  tensor1.lo  tensor2.lo  tensor3.lo  tensor4.lo  tensor5.lo  tensor7.lo  tensor8.lo  tensor9.lo  tile2d.lo  timer.lo  transpose.lo  trig.lo  (+1 more)
rpg_cpp/fftw-3.3.10/libbench2/: Makefile
rpg_cpp/fftw-3.3.10/m4/: Makefile
rpg_cpp/fftw-3.3.10/mpi/: Makefile
rpg_cpp/fftw-3.3.10/rdft/: Makefile  buffered2.lo  ct-hc2c-direct.lo  ct-hc2c.lo  dft-r2hc.lo  dht-r2hc.lo  dht-rader.lo  direct-r2c.lo  direct-r2r.lo  direct2.lo  generic.lo  hc2hc-direct.lo  hc2hc-generic.lo  hc2hc.lo  khc2c.lo  khc2hc.lo  kr2c.lo  kr2r.lo  nop2.lo  plan.lo  plan2.lo  problem2.lo  rank-geq2-rdft2.lo  rank-geq2.lo  rank0-rdft2.lo  rank0.lo  rdft-dht.lo  rdft2-inplace-strides.lo  rdft2-rdft.lo  rdft2-strides.lo  (+6 more)
scripts/: README.md  compare_json.py  compare_json_dirs.sh  download_freesurfer_synthstrip.sh  generate_test_benchmark.py  minify_ants.sh
src/: designer.py  tmi.py
tests/: MESO_nonsquare_ground_truth.json  README.md  conftest.py  e2e_runner.py  e2e_runner_factory.py  e2e_runners.py  input_test_jc.sh  input_test_jc_docker.sh  input_tests.sh  integration.sh  requirements_test.txt  test_e2e_HEAL_coronal.py  test_e2e_MESO_degibbs.py  test_e2e_MESO_downsampled.py  test_e2e_MESO_downsampled_wo_bids.py  test_e2e_MESO_eddy.py  test_e2e_MESO_eddy_wo_bids.py  test_e2e_MESO_nonsquare.py  test_e2e_MESO_nonsquare_wo_bids.py  test_e2e_MESO_nonsquared.py  test_e2e_complex_data.py  test_e2e_complex_data_ds_half.py  test_e2e_complex_data_ds_three_eight.py  test_e2e_heal_coronal.py  test_e2e_high_resolution.py  test_e2e_meso_degibbs.py  test_e2e_meso_eddy.py  test_e2e_meso_eddy_ds_half.py  test_e2e_meso_eddy_ds_three_eight.py  test_e2e_meso_eddy_wo_bids.py  test_e2e_meso_eddy_wo_bids_ds_half.py  test_e2e_meso_eddy_wo_bids_ds_three_eight.py  test_e2e_meso_nonsquare.py  test_e2e_meso_nonsquare_wo_bids.py  test_fit_wrappers.py  test_func_wrappers.py  test_integration.py  test_performance.py  test_real_integration.py  test_requirements.txt  (+4 more)
tests/benchmark/: D1_meso_nonsquare.json  D2_meso_eddy.json  D2_meso_eddy_wo_bids.json  D3_meso_degibbs.json  D4_high_resolution.json  D5_complex_data.json  D6_heal_coronal.json
tests/ground_truth_statistics/: D1.json  D1_MESO_nonsquare.json  D2.json  D2_wo_bids.json  D3.json  D4.json  D5.json  D6.json
tests/scripts/: download_freesurfer_synthstrip.sh  generate_benchmark.py  generate_test_benchmark.py
(+831 files in other folders)
